<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drop In</string>
    <string name="about_drop_in_app">About Drop In App</string>
    <string name="about_because_water">About Because Water</string>
    <string name="online_store">Online Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="about_drop_in_app_content">Drop In App is an Android application built by BU\'s Global App Initiative on behalf of Because Water.</string>
    <string name="about_because_water_content">Because Water is a non-profit dedicated to water sustainability. See more at becausewater.org.</string>
    
	<string name="privacy_title">Drop In PRIVACY POLICY</string>
	<string name="privacy_p1">This privacy policy governs your use of the software application Drop In (“Application”) for mobile devices that was created by BeCause Water Benefit Corp. The Application is a community-driven geomapping app that helps people find, drink, and share water.</string>
	<string name="privacy_h1">What information does the Application obtain and how is it used?</string>
	<string name="privacy_sub1">User Provided Information</string>
	<string name="privacy_p2">The Application obtains the information you provide when you download and register the Application. Registration with us is optional. However, please keep in mind that you may not be able to use some of the features offered by the Application unless you register with us.</string>
	<string name="privacy_p3">When you register with us and use the Application, you generally provide (a) your name, email address, age, username, password and other registration information; (b) transaction-related information, such as when you make purchases, respond to any offers, or download or use applications from us; (c) information you provide us when you contact us for help; (d) credit card information for purchase and use of the Application, and; (e) information you enter into our system when using the Application, such as contact information and project management information.</string>
	<string name="privacy_p4">We may also use the information you provided us to contact your from time to time to provide you with important information, required notices and marketing promotions.</string>
	<string name="privacy_sub2">Automatically Collected Information</string>
	<string name="privacy_p5">In addition, the Application may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile devices unique device ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browsers you use, and information about the way you use the Application.</string>
	<string name="privacy_h2">Does the Application collect precise real time location information of the device?</string>
	<string name="privacy_p6">When you visit the mobile application, we may use GPS technology (or other similar technology) to determine your current location in order to determine the city you are located within and display a location map with relevant advertisements. We will not share your current location with other users or partners.</string>
	<string name="privacy_p7">If you do not want us to use your location for the purposes set forth above, you should turn off the location services for the mobile application located in your account settings or in your mobile phone settings and/or within the mobile application.</string>
	<string name="privacy_h3">Do third parties see and/or have access to information obtained by the Application?</string>
	<string name="privacy_p8">Yes. We will share your information with third parties only in the ways that are described in this privacy statement.</string>
	<string name="privacy_p9">We may disclose User Provided and Automatically Collected Information:</string>
	<string name="privacy_p9_bullet1">• as required by law, such as to comply with a subpoena, or similar legal process;</string>
	<string name="privacy_p9_bullet2">• when we believe in good faith that disclosure is necessary to protect our rights, protect your safety or the safety of others, investigate fraud, or respond to a government request;</string>
	<string name="privacy_p9_bullet3">• with our trusted services providers who work on our behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.</string>
	<string name="privacy_p9_bullet4">• if BeCause Water Benefit Corp is involved in a merger, acquisition, or sale of all or a portion of its assets, you will be notified via email and/or a prominent notice on our Web site of any change in ownership or uses of this information, as well as any choices you may have regarding this information.</string>
	<string name="privacy_h4">What are my opt-out rights?</string>
	<string name="privacy_p10">You can stop all collection of information by the Application easily by uninstalling the Application. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network. You can also request to opt-out via email, at info@becausewater.com</string>
	<string name="privacy_h5">Data Retention Policy, Managing Your Information</string>
	<string name="privacy_p11">We will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. We will retain Automatically Collected information for up to 24 months and thereafter may store it in aggregate. If you’d like us to delete User Provided Data that you have provided via the Application, please contact us at info@becausewater.com  and we will respond in a reasonable time. Please note that some or all of the User Provided Data may be required in order for the Application to function properly.</string>
	<string name="privacy_h6">Children</string>
	<string name="privacy_p12">We do not use the Application to knowingly solicit data from or market to children under the age of 13. If a parent or guardian becomes aware that his or her child has provided us with information without their consent, he or she should contact us at info@becausewater.com.  We will delete such information from our files within a reasonable time.</string>
	<string name="privacy_h7">Security</string>
	<string name="privacy_p13">We are concerned about safeguarding the confidentiality of your information. We provide physical, electronic, and procedural safeguards to protect information we process and maintain. For example, we limit access to this information to authorized employees and contractors who need to know that information in order to operate, develop or improve our Application. Please be aware that, although we endeavor provide reasonable security for information we process and maintain, no security system can prevent all potential security breaches.</string>
	<string name="privacy_h8">Your Consent</string>
	<string name="privacy_p14">By using the Application, you are consenting to our processing of your information as set forth in this Privacy Policy now and as amended by us. "Processing,” means using cookies on a computer/hand-held device or using or touching information in any way, including, but not limited to, collecting, storing, deleting, using, combining and disclosing information, all of which activities will take place in the United States.  If you reside outside the United States your information will be transferred, processed and stored there under United States privacy standards.</string>
	<string name="privacy_h9">Contact us</string>
	<string name="privacy_p15">If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at info@becausewater.com</string>
    
</resources>
